--- a/thesis.tex
+++ b/thesis.tex
@@ -131,7 +131,7 @@
 	\chapter{Components Separation with Graph}
 	\input{chapters/chapter03}
 	
-	\chapter{Discussion}
+	\chapter{Discussions and Concluding Remarks}
 	\input{chapters/discussion}
 	
 	\appendix
