--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -1,7 +1,7 @@
-I would like to thank my supervisor, professor YAMADA Koichi. He gave me the opportunity to continue my learning. To his openness to let me decide and have my own space in my study and to his supportive, valuable academic guidance. Moreover, I have learned from him to be careful and patient in doing research.
+First of all I would like to send my sincere thanks to my supervisor, professor YAMADA Koichi, who gave me the opportunity to continue on my learning journey. For his openness allowed me to responsibly decide and have my own space in my studies and to his supportive, valuable academic guidance. Moreover, I have learned from him to be careful and patient in doing research.
 
-I had only two years here at Nagaoka University of Technology. I would like to thank to all the faculties, staffs, fellow students and friends for their kindly supports and sharing memories. Assistant professor UNEHARA Muneyuki, SUZUKI Izumi and Yamada-lab's members greatly followed all of my research seminars and were always warmly available to assist me. The Nagaoka University of Technology Library provided all of my needed documents and facilities. Division of International Affairs aided most of my student life struggles, organized various interesting programs and supplied useful information. The Japanese Language Department assisted the basic Japanese classes. 
+I had only two years here at Nagaoka University of Technology. I would like to thank all the faculty, staff, fellow students and friends for their kind support and sharing memories: Assistant professor UNEHARA Muneyuki, SUZUKI Izumi and Yamada-lab's members had greatly followed all of my research seminars and were always warmly available to assist me; the Nagaoka University of Technology Library had provided all of my needed documents and facilities; Division of International Affairs for their useful information, supportive aiding and various interesting programs that made my student life more fascinating; the Japanese Language Department had assisted the necessary basic Japanese courses.
 
-I would be thankful to the Ministry of Education, Culture, Sports, Science and Technology who generously gave financial support to my Master course with the Monbukagakusho Scholarship.
+I would be thankful to the Ministry of Education, Culture, Sports, Science and Technology who generously supported my Master course with the Monbukagakusho Scholarship.
 
 Finally, I thank my family. My parents and brothers for their encouragement and endowment in my decisions, my cat for entertaining me all the time.
