--- a/data/synthetic_chain_grid_1.tex
+++ b/data/synthetic_chain_grid_1.tex
@@ -9,7 +9,7 @@
 		{(6.000000,0.000000)/7/},
 		{(7.000000,0.000000)/8/},
 		{(8.000000,0.000000)/9/}}
-	\node[vertex, minimum size = 5pt] (\label) at \pos{};
+	\node[positive vertex] (\label) at \pos{};
 	
 	\foreach \pos/\label/\name in {
 		{(9.000000,0.000000)/1/+}}
@@ -39,7 +39,7 @@
 		{(7.5,-3)/12/}, {(1.5,-2)/13/}, {(2.5,-2)/14/}, {(3.5,-2)/15/}, {(4.5,-2)/16/}, {(5.5,-2)/17/}, 
 		{(6.5,-2)/18/}, {(7.5,-2)/19/}, {(1.5,-1)/20/}, {(2.5,-1)/21/}, {(3.5,-1)/22/}, {(4.5,-1)/23/}, 
 		{(5.5,-1)/24/}, {(6.5,-1)/25/}, {(7.5,-1)/26/}}
-	\node[vertex, minimum size = 5pt] (\label) at \pos{};
+	\node[positive vertex] (\label) at \pos{};
 	
 	\foreach \pos/\label/\name in {
 		{(8.5,-3)/3/+},
